--- a/editing.html
+++ b/editing.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Editor</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-amplify/4.3.13/aws-amplify.min.js"></script>
+    <style>
+        /* Hide the body content until the authentication check is complete */
+        body {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 
@@ -27,7 +34,48 @@
         </div>
     </main>
 
-    <!-- Include external JavaScript file -->
-    <script src="editing.js"></script>
+    <script>
+        // Amplify Configuration
+        Amplify.configure({
+            Auth: {
+                region: 'us-east-1', // Your region
+                userPoolId: 'us-east-1_jcjKwG4JA', // Your Cognito User Pool ID
+                userPoolWebClientId: '38bb82epf2rmhpvbnhck7uoa6b', // Your Cognito App Client ID
+                oauth: {
+                    domain: 'followingsunnahlogin.auth.us-east-1.amazoncognito.com',
+                    scope: ['email', 'openid', 'aws.cognito.signin.user.admin'],
+                    redirectSignIn: 'https://followingsunnah.net/editing.html',
+                    redirectSignOut: 'https://followingsunnah.net/',
+                    responseType: 'code'
+                }
+            }
+        });
+
+        // Check if the user is authenticated
+        async function checkAuth() {
+            try {
+                const user = await Amplify.Auth.currentAuthenticatedUser();
+                console.log('User is authenticated:', user);
+                // Show the body content if the user is authenticated
+                document.body.style.display = 'block';
+            } catch (error) {
+                console.error('Error in authentication check:', error);
+                console.log('No user is authenticated, redirecting to login.');
+                window.location.href = 'https://followingsunnahlogin.auth.us-east-1.amazoncognito.com/login?client_id=38bb82epf2rmhpvbnhck7uoa6b&response_type=code&scope=aws.cognito.signin.user.admin&redirect_uri=https%3A%2F%2Ffollowingsunnah.net%2Fediting.html';
+            }
+        }
+
+        // Run the authentication check when the page loads
+        window.onload = function() {
+            console.log('Checking authentication status...');
+            checkAuth();
+        };
+
+        // Execute command for editor formatting
+        function execCmd(command) {
+            document.execCommand(command, false, null);
+        }
+    </script>
+
 </body>
 </html>
