--- a/editing.html
+++ b/editing.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-amplify/4.3.13/aws-amplify.min.js"></script>
     <style>
-        /* Hide the body content until the authentication check is complete */
         body {
-            display: none;
+            display: none; /* Hide the body until authenticated */
         }
     </style>
 </head>
@@ -35,6 +34,8 @@
     </main>
 
     <script>
+        console.log("Starting script...");
+
         // Amplify Configuration
         Amplify.configure({
             Auth: {
@@ -51,13 +52,15 @@
             }
         });
 
+        console.log("Amplify configured...");
+
         // Check if the user is authenticated
         async function checkAuth() {
+            console.log("Checking authentication...");
             try {
                 const user = await Amplify.Auth.currentAuthenticatedUser();
                 console.log('User is authenticated:', user);
-                // Show the body content if the user is authenticated
-                document.body.style.display = 'block';
+                document.body.style.display = 'block'; // Show content
             } catch (error) {
                 console.error('Error in authentication check:', error);
                 console.log('No user is authenticated, redirecting to login.');
@@ -67,7 +70,7 @@
 
         // Run the authentication check when the page loads
         window.onload = function() {
-            console.log('Checking authentication status...');
+            console.log('Window loaded. Running checkAuth...');
             checkAuth();
         };
 
