--- a/public/editing.html
+++ b/public/editing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Editor</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/editing.css">
     <!-- Ensure that the latest version of Amplify is loaded -->
     <script src="https://cdn.jsdelivr.net/npm/aws-amplify@latest/dist/aws-amplify.min.js"></script>
 </head>
