--- a/public/form.html
+++ b/public/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="/src/app.css">
     <title>Contact Us</title>
     <link
       rel="stylesheet"
@@ -13,7 +13,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <script src="index.js"></script>
+    <script src="/src/index.js"></script>
 
     <script
       type="text/javascript"
