--- a/public/topics.html
+++ b/public/topics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Topics - Following the Sunnah</title>
-    <link rel="stylesheet" href="/src/app.css"> <!-- Link to CSS file -->
+    <link rel="stylesheet" href="app.css"> <!-- Link to CSS file -->
 </head>
 <body>
 
