--- a/public/why-beard.html
+++ b/public/why-beard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why do Muslims keep the beard?</title>
-    <link rel="stylesheet" href="/src/app.css"> <!-- Make sure to link the CSS file -->
+    <link rel="stylesheet" href="app.css"> <!-- Make sure to link the CSS file -->
 </head>
 <body>
     <header>
