--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,6 @@
   </footer>
 
   <!-- Link to external JavaScript file -->
-  <script src="/src/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
