--- a/public/podcast.html
+++ b/public/podcast.html
@@ -15,6 +15,7 @@
     <a href="https://youtu.be/moD6FxZu-K8?si=3G5HJtvZGOAVQ_N2" target="_blank"><span class="Podcast-button">Episode 1</span></a>
     <a href="https://link-to-episode-2.com" target="_blank"><span class="Podcast-button">Episode 2</span></a>
     <a href="https://link-to-episode-3.com" target="_blank"><span class="Podcast-button">Episode 3</span></a>
+    <a href="https://link-to-episode-4.com" target="_blank"><span class="Podcast-button">Episode 4</span></a>
     <!-- More podcast episodes here -->
   </main>
   <footer>
