--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,11 @@
   <header id="header">
     <h1>Following the Sunnah</h1>
     <div class="tab">
-      <a href="podcast.html"><button class="tablinks">Podcast</button></a>
-      <a href="topics.html"><button class="tablinks">Topics</button></a>
-      <a href="form.html"><button class="tablinks">Contact Us</button></a>
-      <a href="logged_in.html"><button class="tablinks">Login</button></a>
+      <a href="/podcast.html"><button class="tablinks">Podcast</button></a>
+      <a href="/topics.html"><button class="tablinks">Topics</button></a>
+      <a href="/form.html"><button class="tablinks">Contact Us</button></a>
+      <a href="/logged_in.html"><button class="tablinks">Login</button></a>
+      
 
     </div>
   </header>
