--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="app.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Following the Sunnah</title>
-</head>
-<body>
-
-  <header id="header">
-    <h1>Following the Sunnah</h1>
-    <div class="tab">
-      <a href="/podcast.html"><button class="tablinks">Podcast</button></a>
-      <a href="/topics.html"><button class="tablinks">Topics</button></a>
-      <a href="/form.html"><button class="tablinks">Contact Us</button></a>
-      <a href="/logged_in.html"><button class="tablinks">Login</button></a>
-      
-
-    </div>
-  </header>
-
-  <div id="homeContent">
-    <p id="dynamicMessage">"O you who believe, obey Allah and obey the Messenger and those in authority among you..."</p>
-  </div>
-
-  <footer>
-    <p>&copy; 2024 Following the Sunnah</p>
-  </footer>
-
-  <!-- Link to external JavaScript file -->
-  <script src="app.js"></script>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- The React app will be injected into this div -->
+  </body>
 </html>
